# tsisa_2022

./: .env  docker-compose.yml  main.py  pyproject.toml
blockchain/: Dockerfile  Untitled.ipynb  main.py  pyproject.toml
blockchain/alembic/: env.py
blockchain/alembic/versions/: b5186c5b0d35_add_data_sign.py  be5bdfc4fed3_block_table.py
blockchain/api/: api.py
blockchain/api/endpoints/: blockchain.py
blockchain/core/: settings.py
blockchain/models/: __init__.py  base.py  blockchain.py
blockchain/repositories/: base.py  blockchain.py
blockchain/schemas/: blockchain.py
blockchain/services/: blockchain.py
sem2/: task.py
