[tool.poetry]
name = "tsisa_2022"
version = "0.1.0"
description = ""
authors = ["Damir Kuzovatov <kuz.damir.01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
