[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["sudden_appearance <kuz.damir.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
cryptography = "^38.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
